# Combine.Bot

./: Dockerfile  README.md  bot_main.py  config.py  create_db.py  docker-compose.yaml  main_api.py  pyproject.toml
src/api/: create_app.py
src/api/data/: data_service.py  endpoints.py  schemas.py
src/api/message/: endpoints.py  schemas.py
src/bot/: __init__.py  handlers.py  keyboards.py  states.py  text.py
src/bot/my_events/: __init__.py  handlers.py  states.py
src/bot/my_events/dialogs/: __init__.py  my_events_list.py
src/bot/my_past_events/: __init__.py  handlers.py  states.py
src/bot/my_past_events/dialogs/: __init__.py  my_past_events_list.py
src/bot/registration/: __init__.py  handlers.py  keyboards.py  states.py  text.py
src/bot/registration/dialogs/: __init__.py  create_team.py  join_team.py  search_team.py
src/bot/services/: events_service.py  recomendation_service.py  registration_service.py  start_service.py
src/bot/start/: __init__.py  handlers.py  keyboards.py  text.py
src/data/: db.py  models.py
src/data/repositories/: __init__.py  base.py  team_repo.py  user_repo.py  user_team_event_repo.py  user_team_recommendations_repo.py  users_in_search_repo.py
